# LORE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RefPenTest · Layer 4 技术方案.md  RefPenTest 项目实现指南（分阶段详细任务）.md  SECURITY.md  XPEC Layer3 融合框架分析.docx  XPEC Layer3 融合框架分析.md  XPEC-Layer3 融合框架-实现流程.md  XPEC_Layer3_融合框架_顶会论文支撑文档.docx  backend_runner.py  brute_ragflow.py  celerybeat-schedule.dir  check_all_results.py  check_results.py  crawl_wechat.py  crawl_with_proxy.ps1  debug_ragflow_upload.py  debug_v1_upload.py  final_upload_test.py  find_ragflow_docs.py  fusion_report.txt  inspect_layer1_output.py  lore.py  lore_inc.py  main_crawler.py  map_ragflow_v1.py  probe_final.py  probe_ragflow_api.py  probe_structure.py  probe_v015.py  pyproject.toml  refpentest.py  requirements.txt  rerun_2fix.py  rerun_4sessions.py  rerun_8sessions.py  run_dashboard.bat  run_discovery.py  (+15 more)
configs/: config.yaml  design.yaml  sec_aliases.json
crawlers/: __init__.py  attack_crawler.py  base_crawler.py  config.py  crawler_manager.py  csdn_crawler.py  example_crawler.py  github_crawler.py  main_crawler.py  qianxin_crawler.py  rss_crawler.py  rss_scheduler.py  sync_data_light.py  xianzhi_crawler.py
dashboard/: CHANGELOG.md  FEATURE_COMPARISON.md  QUICKSTART.md  README.md  UI_SHOWCASE.md  VISUALIZATION_GUIDE.md  __init__.py  app.py  start.bat  start.sh  start_visual.bat  start_visual.sh
data/: .pipeline_state.json
docs/: 01_OVERVIEW.md  02_ARCHITECTURE.md  03_USAGE_GUIDE.md  04_ADVANCED_FEATURES.md  04_Log Adapter  多框架日志接入指南.md  05_CRAWLER_FRAMEWORK.md  05_SOFTWARE_COPYRIGHT_USER_MANUAL.md  REFLECTION_EXPERIENCE.md
processors/: README.md  TRAINING_REPORT.md  __init__.py  adaptive_retriever.py  auto_labeler.py  auto_labeler_v2.py  balance_dataset.py  dataset.py  evaluator.py  evo_config.py  failure_detector.py  llm_client.py  query_rewriter.py  ragflow_client.py  reflection_diagnoser.py  step3_usage_example.py  test_framework.py  test_llm_integration.py  test_step3_complete.py  train_balanced.py  trainer.py  vector_store.py
quality/: __init__.py  account_scorer.py
queues/: gap_queue.jsonl
run/: run_full_pipeline.py  run_inc_pipeline.py  run_layer0.py  run_layer1_llm_batch.py  run_layer2_analysis.py  run_layer3_phase12.py  run_layer3_phase34.py  run_layer3_phase5.py  run_layer4_gap_dispatch.py
scripts/: check_verify.py  eval_pentest_outcomes.py  eval_training_metrics.py  plot_dataset_selection.py  run_layer0.py  smoke_layer3_precheck.py  test_ragflow_api.py
src/: __init__.py  llm_client.py  models.py  prompts.py  ragflow_uploader.py
tests/: conftest.py  (+11 more)
(+115 files in other folders)
