[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lore"
version = "0.1.0"
description = "LORE — a research-grade RAG-augmented pentest agent corpus analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["penetration-testing", "RAG", "LLM", "security", "data-pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
run-layer0 = "scripts.run_layer0:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ─────────────────────────────────────────────────────────────────────────────
# pytest 配置
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "slow: marks tests as slow",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage 配置
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# ─────────────────────────────────────────────────────────────────────────────
# mypy 配置
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]
